--- a/styles.css
+++ b/styles.css
@@ -571,7 +571,7 @@ footer a:hover{
 		padding: 0;
 	}
 	.form-btn{
-		padding: 13px 150px 10px;
+		padding: 13px 10% 10px;
 		font-size: 15px;
 		margin-top: 20px;
 	}
