--- a/styles.css
+++ b/styles.css
@@ -495,6 +495,9 @@ footer a:hover{
 	.header-col-1{
 		padding: 50px 0 0;
 	}
+	.header-col-2{
+		margin-left: -50px;
+	}
 	.header-img{
 		width: 400px;
 		height: 300px;
