--- a/styles.css
+++ b/styles.css
@@ -539,7 +539,7 @@ footer a:hover{
 		padding-top: 20px;
 	}
 	.card-row{
-		padding: 50px 0 0 0;
+		padding: 50px 50px 0 0;
 		margin: 0;
 	}
 	.col-opera{
