--- a/styles.css
+++ b/styles.css
@@ -540,7 +540,7 @@ footer a:hover{
 	}
 	.card-row{
 		padding: 50px 50px 0 0;
-		margin: 0;
+		margin: auto;
 	}
 	.col-opera{
 		margin-top: 40px;
