--- a/styles.css
+++ b/styles.css
@@ -498,6 +498,9 @@ footer a:hover{
 		width: 400px;
 		height: 300px;
 	}
+	.header-btn-2{
+		margin-left: 0:
+	}
 
 		/*Features section*/
 	.features-section{
